Image spacing fixes

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -1133,4 +1133,7 @@ https://flickity.metafizzy.co
   .leftPhone {
     width: 240px;
   }
+  .build-xmtp-img {
+    height: 25em;
+  }
 }
